--- a/notebooks/iros2020.Rmd
+++ b/notebooks/iros2020.Rmd
@@ -351,6 +351,20 @@ $$\beta_{.} \sim Normal(0, 10)$$
 Model fitting:
 
 ```{r, eval=train_models}
+# A null model to compare against
+scenario_completed.model.null = brm(
+  scenario_completed ~ 0 + Intercept,
+  family = "bernoulli",
+  prior = set_prior("normal(0, 10)", class = "b"),
+  data = plot_df,
+  seed = default_seed,
+  save_all_pars = T,
+  sample_prior = T
+)
+scenario_completed.model.null = add_criterion(scenario_completed.model.null, "waic")
+scenario_completed.model.null = add_criterion(scenario_completed.model.null, "loo", reloo = T)
+saveModel(scenario_completed.model.null)
+
 # The trend model to see if there is a trend in the noise level variable
 scenario_completed.model.t = brm(
   scenario_completed ~ 0 + Intercept + ((has_dx + has_ax) * noise_level) + (gender + age_group + robot_experience) + num_optimal,
@@ -394,6 +408,7 @@ saveModel(scenario_completed.model.v)
 ```
 ```{r, eval=!train_models}
 # Load the models
+scenario_completed.model.null = loadModel("scenario_completed.model.null")
 scenario_completed.model.t = loadModel("scenario_completed.model.t")
 scenario_completed.model.v = loadModel("scenario_completed.model.v")
 ```
@@ -401,6 +416,9 @@ scenario_completed.model.v = loadModel("scenario_completed.model.v")
 Model fitting results:
 
 ```{r}
+print(summary(scenario_completed.model.null))
+print(performance::r2(scenario_completed.model.null))
+
 # Print the parameters, and some initial diagnostics
 print(tidy_stan(scenario_completed.model.t))
 print(performance::r2(scenario_completed.model.t))
@@ -415,9 +433,12 @@ Diagnostics of the fit:
 # Alternative diagnostics: diagnostic_posterior(scenario_completed.model.v)
 
 # LOO cross-validation results
+print(scenario_completed.model.null$criteria$loo$estimates)
 print(scenario_completed.model.t$criteria$loo$estimates)
 print(scenario_completed.model.v$criteria$loo$estimates)
-print(loo_compare(scenario_completed.model.t, scenario_completed.model.v))
+print(loo_compare(scenario_completed.model.null,
+                  scenario_completed.model.t,
+                  scenario_completed.model.v))
 
 # Diagnostics of the sampling process
 par(mfrow=c(1,2))
@@ -426,6 +447,9 @@ plot(scenario_completed.model.v$criteria$loo, main = "Values Model")
 
 # Include posterior predictive checks of the sampling (are sampling according
 # to the data that we actually have?)
+mcmc_intervals(as.matrix(scenario_completed.model.null), regex_pars = "b_", prob = 0.90, prob_outer = 0.95) +
+  ggtitle("Null Model")
+
 p1 = pp_check(scenario_completed.model.t, type = "bars_grouped", group = "has_ax", stat = "median") + ggtitle("t:has_ax")
 p2 = pp_check(scenario_completed.model.t, type = "bars_grouped", group = "has_dx") + ggtitle("t:has_dx")
 p3 = pp_check(scenario_completed.model.t, type = "bars_grouped", group = "noise_level") + ggtitle("t:noise_level")
@@ -441,21 +465,19 @@ mcmc_intervals(as.matrix(scenario_completed.model.v), regex_pars = "b_", prob = 
   ggtitle("Values Model")
 
 # Plot predictions vs original
-preds_p_df = scenario_completed.model.t %>% predict() %>% as_tibble()
+preds_p_df = scenario_completed.model.null %>% predict() %>% as_tibble()
 p1 =
   preds_p_df %>%
-    add_column(scenario_completed = scenario_completed.model.t$data$scenario_completed) %>%
+    add_column(scenario_completed = scenario_completed.model.null$data$scenario_completed) %>%
     ggplot(aes(x = Estimate, y = scenario_completed, color = scenario_completed)) +
       geom_point() +
-      geom_vline(xintercept = inv_logit_scaled(2.28)) + # Intercept estimate in the model
-      geom_text(aes(x = inv_logit_scaled(2.28)-0.01, y = 0.5, label = "Intercept", color = 0, angle=90)) +
       labs(x = "Predicted values") +
       ylim(0, 1) +
       xlim(0, 1) +
-      ggtitle("Trends Model")
+      ggtitle("Null Model")
 
 preds_p_df = plot_df %>%
-  add_predicted_draws(scenario_completed.model.t) %>%
+  add_predicted_draws(scenario_completed.model.null) %>%
   group_by(scenario_completed, .prediction) %>%
   count()
 p2 =
@@ -465,22 +487,19 @@ p2 =
       geom_text(aes(label = sprintf("%1.2f", n / sum(preds_p_df$n))), size = 10, vjust = 1) +
       scale_fill_gradient(limits = c(0, 1))
 
-# Plot predictions vs original
-preds_p_df = scenario_completed.model.v %>% predict() %>% as_tibble()
+preds_p_df = scenario_completed.model.t %>% predict() %>% as_tibble()
 p3 =
   preds_p_df %>%
-    add_column(scenario_completed = scenario_completed.model.v$data$scenario_completed) %>%
+    add_column(scenario_completed = scenario_completed.model.t$data$scenario_completed) %>%
     ggplot(aes(x = Estimate, y = scenario_completed, color = scenario_completed)) +
       geom_point() +
-      geom_vline(xintercept = inv_logit_scaled(2.28)) + # Intercept estimate in the model
-      geom_text(aes(x = inv_logit_scaled(2.28)-0.01, y = 0.5, label = "Intercept", color = 0, angle=90)) +
       labs(x = "Predicted values") +
       ylim(0, 1) +
       xlim(0, 1) +
-      ggtitle("Values Model")
+      ggtitle("Trends Model")
 
 preds_p_df = plot_df %>%
-  add_predicted_draws(scenario_completed.model.v) %>%
+  add_predicted_draws(scenario_completed.model.t) %>%
   group_by(scenario_completed, .prediction) %>%
   count()
 p4 =
@@ -490,7 +509,30 @@ p4 =
       geom_text(aes(label = sprintf("%1.2f", n / sum(preds_p_df$n))), size = 10, vjust = 1) +
       scale_fill_gradient(limits = c(0, 1))
 
-grid.arrange(p1, p2, p3, p4, nrow = 2, ncol = 2)
+# Plot predictions vs original
+preds_p_df = scenario_completed.model.v %>% predict() %>% as_tibble()
+p5 =
+  preds_p_df %>%
+    add_column(scenario_completed = scenario_completed.model.v$data$scenario_completed) %>%
+    ggplot(aes(x = Estimate, y = scenario_completed, color = scenario_completed)) +
+      geom_point() +
+      labs(x = "Predicted values") +
+      ylim(0, 1) +
+      xlim(0, 1) +
+      ggtitle("Values Model")
+
+preds_p_df = plot_df %>%
+  add_predicted_draws(scenario_completed.model.v) %>%
+  group_by(scenario_completed, .prediction) %>%
+  count()
+p6 =
+  preds_p_df %>%
+    ggplot(aes(x = scenario_completed, y = .prediction, fill = n / sum(preds_p_df$n))) +
+      geom_tile() +
+      geom_text(aes(label = sprintf("%1.2f", n / sum(preds_p_df$n))), size = 10, vjust = 1) +
+      scale_fill_gradient(limits = c(0, 1))
+
+grid.arrange(p1, p3, p5, p2, p4, p6, nrow = 2, ncol = 3)
 ```
 
 Inferences from the fitting:
@@ -504,8 +546,16 @@ Inferences from the fitting:
 # bf = 3 - 20: Positive
 # bf = 20 - 150: Strong
 # bf > 150: Very strong
+print(bayesfactor_rope(scenario_completed.model.null, null = c(-0.055, 0.055)), n = 30)
 print(bayesfactor_rope(scenario_completed.model.t, null = c(-0.055, 0.055)), n = 30)
 print(bayesfactor_rope(scenario_completed.model.v, null = c(-0.055, 0.055)), n = 30)
+
+# Compare the models. Note: we cannot do this because we don't have enough samples.
+# The default is 4000; apparently these functions are only meaningful with 40000
+# comparison = bayesfactor_models(scenario_completed.model.t, scenario_completed.model.v,
+#                                 denominator = scenario_completed.model.null)
+# print(comparison)
+# print(bayesfactor_inclusion(comparison))
 
 # # If we're using the brms functions, then use the following (make sure to update!)
 # common_hyp_to_test = c("-2 * has_ax1 = 0", "-2 * has_dx1 = 0")
@@ -582,6 +632,7 @@ p_df =
 
 fits_p_df = p_df %>% add_fitted_draws(scenario_completed.model.v)
 pars_p_df = scenario_completed.model.t %>% extract_draws(newdata = p_df %>% rename(noise_level = noise_level_f))
+rope_value = inv_logit_scaled(fixef(scenario_completed.model.null)["Intercept","Estimate"])
 # We don't want predicted draws because that's a raw count of ones and zeros; not the
 # probability distribution
 # preds_p_df = p_df %>% add_predicted_draws(scenario_completed.model.v)
@@ -590,6 +641,9 @@ pars_p_df = scenario_completed.model.t %>% extract_draws(newdata = p_df %>% rena
 gg_df %>%
   filter(scenario_completed == 'complete') %>%
   ggplot(aes(x = has_ax, y = n / 20)) +
+    geom_rect(ymin = rope_value-0.055, ymax = rope_value+0.055,
+              xmin = -Inf, xmax = Inf,
+              color = "transparent", fill = "white") +
     stat_halfeye(aes(y = .value), data = fits_p_df, position = position_nudge(x = 0.1)) +
     geom_point(aes(color = paste(has_ax, has_dx, noise_level, sep = ":")), size = 2) +
     stat_summary(fun.y = median, geom = "point", shape = 23, size = 6) +
@@ -600,6 +654,9 @@ gg_df %>%
 gg_df %>%
   filter(scenario_completed == 'complete') %>%
   ggplot(aes(x = has_dx, y = n / 20)) +
+    geom_rect(ymin = rope_value-0.055, ymax = rope_value+0.055,
+              xmin = -Inf, xmax = Inf,
+              color = "transparent", fill = "white") +
     stat_halfeye(aes(y = .value), data = fits_p_df, position = position_nudge(x = 0.1)) +
     geom_point(aes(color = paste(has_ax, has_dx, noise_level, sep = ":")), size = 2) +
     stat_summary(fun.y = median, geom = "point", shape = 23, size = 6) +
@@ -610,6 +667,9 @@ gg_df %>%
 gg_df %>%
   filter(scenario_completed == 'complete') %>%
   ggplot(aes(x = noise_level, y = n / 20)) +
+    geom_rect(ymin = rope_value-0.055, ymax = rope_value+0.055,
+              xmin = -Inf, xmax = Inf,
+              color = "transparent", fill = "white") +
     stat_halfeye(aes(y = .value, x = noise_level_f), data = fits_p_df, position = position_nudge(x = 0.1)) +
     geom_point(aes(color = paste(has_ax, has_dx, noise_level, sep = ":")), size = 2) +
     stat_summary(fun.y = median, geom = "point", shape = 23, size = 6) +
@@ -631,6 +691,9 @@ p_df =
 gg_df %>%
   filter(scenario_completed == 'complete') %>%
   ggplot(aes(x = noise_level, y = n / 20)) +
+    geom_rect(ymin = rope_value-0.055, ymax = rope_value+0.055,
+              xmin = -Inf, xmax = Inf,
+              color = "transparent", fill = "white") +
     stat_halfeye(aes(y = .value, x = noise_level_f), data = fits_p_df, position = position_nudge(x = 0.1)) +
     geom_line(aes(y = .value, group = .sample, alpha = 0.3), data = p_df) +
     geom_point(aes(color = paste(has_ax, has_dx, noise_level, sep = ":")), size = 2) +
@@ -645,7 +708,7 @@ rm(fits_p_df, pars_p_df, pars_p_df_b, pars_p_df_X, pars_p_df_y, p_df, gg_df)
 ```
 
 ```{r, echo=F}
-rm(scenario_completed.model.t, scenario_completed.model.v)
+rm(scenario_completed.model.null, scenario_completed.model.t, scenario_completed.model.v)
 gc()
 ```
 
